; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/minix/extr_bitmap.c_minix_count_free_blocks.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/minix/extr_bitmap.c_minix_count_free_blocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.minix_sb_info = type { i64, i64, i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @minix_count_free_blocks(%struct.minix_sb_info* %0) #0 {
  %2 = alloca %struct.minix_sb_info*, align 8
  store %struct.minix_sb_info* %0, %struct.minix_sb_info** %2, align 8
  %3 = load %struct.minix_sb_info*, %struct.minix_sb_info** %2, align 8
  %4 = getelementptr inbounds %struct.minix_sb_info, %struct.minix_sb_info* %3, i32 0, i32 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.minix_sb_info*, %struct.minix_sb_info** %2, align 8
  %7 = getelementptr inbounds %struct.minix_sb_info, %struct.minix_sb_info* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.minix_sb_info*, %struct.minix_sb_info** %2, align 8
  %10 = getelementptr inbounds %struct.minix_sb_info, %struct.minix_sb_info* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.minix_sb_info*, %struct.minix_sb_info** %2, align 8
  %13 = getelementptr inbounds %struct.minix_sb_info, %struct.minix_sb_info* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = sub nsw i64 %11, %14
  %16 = add nsw i64 %15, 1
  %17 = call i64 @count_free(i32 %5, i32 %8, i64 %16)
  %18 = load %struct.minix_sb_info*, %struct.minix_sb_info** %2, align 8
  %19 = getelementptr inbounds %struct.minix_sb_info, %struct.minix_sb_info* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = shl i64 %17, %20
  ret i64 %21
}

declare dso_local i64 @count_free(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
